# base_fastapi

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: __main__.py  settings.py
app/db/: base.py  config.py  utils.py
app/db/dao/: dummy_dao.py
app/db/migrations/: env.py
app/db/models/: dummy_model.py
app/web/: application.py  lifetime.py
app/web/api/: router.py
app/web/api/dummy/: __init__.py  views.py
app/web/api/echo/: views.py
