[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Bruno de Araújo Alves <me@baraus.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
ormar = "^0.11.0"
alembic = "^1.7.7"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
psycopg2-binary = "^2.9.3"
fastapi = "^0.75.2"
yarl = "^1.7.2"
asyncpg = "^0.25.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
